# Atlas-Commute-Mini-App

./: .dockerignore  .gitignore  Dockerfile  Makefile  PLANNING.md  README.md  dumper.sh  main.py  pyproject.toml
agents/: factory.py
agents/scheduler/: graph.py  prompts.py  state.py
api/: main.py
api/routes/: commute.py  monitor.py  stats.py
engine/cache/: redis_svc.py
engine/queue/: config.py  tasks.py
engine/telemetry/: hub.py  logger.py  metrics.py  time_utils.py
scripts/: dashboard.py
tests/integration/: test_api.py  test_e2e_flow.py  test_resilience.py  test_worker.py
tests/unit/: test_metrics.py  test_scheduler_agent.py
tools/clients/: flight_client.py  traffic_client.py
tools/mocks/: flight_delayed.json  traffic_heavy.json
