[project]
name = "mock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.2",
    "fastapi>=0.128.0",
    "langchain-google-genai>=4.2.0",
    "langgraph>=1.0.6",
    "mypy>=1.19.1",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "redis>=7.1.0",
    "rich>=14.2.0",
    "ruff>=0.14.13",
    "structlog>=25.5.0",
    "uvicorn>=0.40.0",
]
